# roselia

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt
common/buffer/: CMakeLists.txt  string_buffer.h
common/database/: CMakeLists.txt  data_base.cc  data_base.h
common/logger/: CMakeLists.txt  logger.cc  logger.h  logging.cc  logging.h
common/logger/glog/: log_severity.h  logging.h  raw_logging.h  stl_logging.h  vlog_is_on.h
common/transport/: CMakeLists.txt
common/transport/channel/: channel_pipeline.cc  channel_pipeline.h
common/transport/channel/abstract/: channel.cc  channel.h
common/transport/protocols/: CMakeLists.txt
common/utility/: CMakeLists.txt
common/utility/CRC/: crc.cc  crc.h
common/utility/buffer/: string_buffer.cc
configure/cmake/: build_option.cmake  prepare_release.cmake
framework/: CMakeLists.txt
framework/capability/speech/: speech_manager_agent.cc  speech_manager_agent.h
framework/capability_agents/speech/: speech_manager_impl.h
interface/include/: speech_manager.h  speech_manager_interface.h
master/: CMakeLists.txt  main.cc
services/: CMakeLists.txt  main.cc
